--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.14.1
   http: ^0.12.2
+  integration_test:
 
 
 # For information on the generic Dart part of this file, see the
